--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.label :descripcion %>
+    <%= f.text_area :descripcion %>
   </div>
 
   <div class="field">
