--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Description:</strong>
-  <%= @category.description %>
+  <strong>Descripcion:</strong>
+  <%= @category.descripcion %>
 </p>
 
 <p>
@@ -15,5 +15,5 @@
   <%= @category.estado %>
 </p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Modificar', edit_category_path(@category) %> |
+<%= link_to 'Regresar', categories_path %>
