--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,26 +1,24 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Categories</h1>
-
+<h1>Categorias</h1>
 <table>
   <thead>
     <tr>
       <th>Nombre</th>
-      <th>Description</th>
+      <th>Descripcion</th>
       <th>Estado</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="principal">
     <% @categories.each do |category| %>
       <tr>
         <td><%= category.nombre %></td>
-        <td><%= category.description %></td>
+        <td><%= category.descripcion %></td>
         <td><%= category.estado %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', category %></td>
+        <td><%= link_to 'Modificar', edit_category_path(category) %></td>
+        <td><%= link_to 'Eliminar', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'Nueva Categoria', new_category_path %>
