--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :category_id %>
+    <%= f.label :"Categoria" %>
     <%= f.collection_select :category_id, Category.all, :id, :nombre %>
   </div>
 
