--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Product</h1>
+<h1>Modificar Producto</h1>
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Ver', @product %> |
+<%= link_to 'Regresar', products_path %>
