--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Producto</h1>
+<h1>Productos</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Category</th>
+      <th>Categoria</th>
       <th>Nombre</th>
       <th>Descripcion</th>
       <th>Precio</th>
@@ -22,9 +22,9 @@
         <td><%= product.descripcion %></td>
         <td><%= product.precio %></td>
         <td><%= product.cantidad %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', product %></td>
+        <td><%= link_to 'Modificar', edit_product_path(product) %></td>
+        <td><%= link_to 'Eliminar', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
