--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @product.category %>
+  <%= @product.category.nombre %>
 </p>
 
 <p>
@@ -25,5 +25,5 @@
   <%= @product.cantidad %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Modificar', edit_product_path(@product) %> |
+<%= link_to 'Regresar', products_path %>
